@@ -372,6 +372,10 @@ Optimizations
 * LUCENE-6690: Sped up MultiTermsEnum.next() on high-cardinality fields.
   (Adrien Grand)
 
+* LUCENE-6621: Removed two unused variables in analysis/stempel/src/java/org/
+  egothor/stemmer/Compile.java
+  (Rishabh Patel via Christine Poerschke)
+
 Build
 
 * LUCENE-6518: Don't report false thread leaks from IBM J9
